--- a/Assets/CSVParser/Scripts/CSVParser.asmdef
+++ b/Assets/CSVParser/Scripts/CSVParser.asmdef
@@ -1,6 +1,6 @@
 {
-    "name": "Attri",
-    "rootNamespace": "Attri.Runtime",
+    "name": "CSVParser",
+    "rootNamespace": "yotokun",
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
