--- a/Assets/Attri/Editor/Attri.Editor.asmdef
+++ b/Assets/Attri/Editor/Attri.Editor.asmdef
@@ -4,15 +4,21 @@
     "references": [
         "GUID:bfd448b910755d444b7c4acd84a11812",
         "GUID:76f95922c71d5b348a1b85e4b812849e",
-        "GUID:bbde805d927e795439d7a746d1749cab"
+        "GUID:bbde805d927e795439d7a746d1749cab",
+        "GUID:5a46ad82eac024e4fbb6a0516a5def17",
+        "GUID:ebcc2dbcca2c7f34ea1bbffd92c7e885"
     ],
     "includePlatforms": [
         "Editor"
     ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
-    "overrideReferences": false,
-    "precompiledReferences": [],
+    "overrideReferences": true,
+    "precompiledReferences": [
+        "Newtonsoft.Json.dll",
+        "Microsoft.NET.StringTools.dll",
+        "Unity.Plastic.Newtonsoft.Json.dll"
+    ],
     "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [],
