--- a/Assets/Attri/Runtime/Attri.asmdef
+++ b/Assets/Attri/Runtime/Attri.asmdef
@@ -2,12 +2,14 @@
     "name": "Attri",
     "rootNamespace": "Attri.Runtime",
     "references": [
-        "GUID:76f95922c71d5b348a1b85e4b812849e"
+        "GUID:76f95922c71d5b348a1b85e4b812849e",
+        "GUID:bbde805d927e795439d7a746d1749cab",
+        "GUID:5a46ad82eac024e4fbb6a0516a5def17"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
-    "overrideReferences": false,
+    "overrideReferences": true,
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
