--- a/Assets/Attri/Editor/Attri.Editor.asmdef
+++ b/Assets/Attri/Editor/Attri.Editor.asmdef
@@ -6,7 +6,8 @@
         "GUID:76f95922c71d5b348a1b85e4b812849e",
         "GUID:bbde805d927e795439d7a746d1749cab",
         "GUID:5a46ad82eac024e4fbb6a0516a5def17",
-        "GUID:ebcc2dbcca2c7f34ea1bbffd92c7e885"
+        "GUID:ebcc2dbcca2c7f34ea1bbffd92c7e885",
+        "GUID:df380645f10b7bc4b97d4f5eb6303d95"
     ],
     "includePlatforms": [
         "Editor"
