--- a/Assets/Attri/Editor/Attri.Editor.asmdef
+++ b/Assets/Attri/Editor/Attri.Editor.asmdef
@@ -7,7 +7,8 @@
         "GUID:bbde805d927e795439d7a746d1749cab",
         "GUID:5a46ad82eac024e4fbb6a0516a5def17",
         "GUID:ebcc2dbcca2c7f34ea1bbffd92c7e885",
-        "GUID:df380645f10b7bc4b97d4f5eb6303d95"
+        "GUID:df380645f10b7bc4b97d4f5eb6303d95",
+        "GUID:d8b63aba1907145bea998dd612889d6b"
     ],
     "includePlatforms": [
         "Editor"
